--- a/EuclidGeometry2D/EuclidGeometry2D.UnitTests/EuclidGeometry2D.UnitTests.csproj
+++ b/EuclidGeometry2D/EuclidGeometry2D.UnitTests/EuclidGeometry2D.UnitTests.csproj
@@ -51,6 +51,7 @@
     <Compile Include="PointTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SegmentTests.cs" />
+    <Compile Include="TriangleTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
