--- a/Forms/Forms/Forms.csproj
+++ b/Forms/Forms/Forms.csproj
@@ -46,11 +46,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AuxilaryForm.cs">
+    <Compile Include="AuxiliaryForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="AuxilaryForm.Designer.cs">
-      <DependentUpon>AuxilaryForm.cs</DependentUpon>
+    <Compile Include="AuxiliaryForm.Designer.cs">
+      <DependentUpon>AuxiliaryForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="DialogForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="DialogForm.Designer.cs">
+      <DependentUpon>DialogForm.cs</DependentUpon>
     </Compile>
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
@@ -58,13 +64,25 @@
     <Compile Include="MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="OwnedForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="OwnedForm.Designer.cs">
+      <DependentUpon>OwnedForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="AuxilaryForm.resx">
-      <DependentUpon>AuxilaryForm.cs</DependentUpon>
+    <EmbeddedResource Include="AuxiliaryForm.resx">
+      <DependentUpon>AuxiliaryForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="DialogForm.resx">
+      <DependentUpon>DialogForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="OwnedForm.resx">
+      <DependentUpon>OwnedForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
