--- a/Events/Events/Events.csproj
+++ b/Events/Events/Events.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{F324D38F-5998-41D5-94E5-04B290BC5C62}</ProjectGuid>
+    <ProjectGuid>{6653650A-8D44-40E6-802C-327FCE2F9F4F}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>WebService</RootNamespace>
-    <AssemblyName>WebService</AssemblyName>
+    <RootNamespace>Events</RootNamespace>
+    <AssemblyName>Events</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -43,16 +43,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Admin.cs" />
-    <Compile Include="ConsoleLogger.cs" />
-    <Compile Include="FileLogger.cs" />
-    <Compile Include="Logger.cs" />
+    <Compile Include="AlarmClock.cs" />
+    <Compile Include="AlarmEventArgs.cs" />
+    <Compile Include="AlarmEventHandler.cs" />
+    <Compile Include="Dog.cs" />
+    <Compile Include="Person.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RegisteredUser.cs" />
-    <Compile Include="Service.cs" />
-    <Compile Include="User.cs" />
-    <Compile Include="VipUser.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
